[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/ChunkManager.gd" type="Script" id=1]

[node name="ChunkManager" type="Spatial"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="TrafficCountUpdate" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="VehicleBalanceUpdate" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Chunks" type="Spatial" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TrafficCountUpdate" to="." method="_on_TrafficCountUpdate_timeout"]
[connection signal="timeout" from="VehicleBalanceUpdate" to="." method="_on_VehicleBalanceUpdate_timeout"]
